--- a/juego.html
+++ b/juego.html
@@ -71,7 +71,11 @@
         </div>
       </div>
     </main>
-
+    <footer>
+      <div class="contenedor-footer">
+          <h3>Javascript by Ivan Mera ©2023</h3>
+      </div>
+  </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
