--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 <main>
     <h2 id="digital" class="title">RELOJ DIGITAL</h2>
+    <p>Para poder realizar este reloj, se utilizó las funciones de getMonth, getHours, getMinutes, getSeconds para poder leer los valores de la fecha y hora actual, se le aplicó un setInterval de 1 segundo para que se actualice la información mostrada en ese tiempo y se estableció una condicional para que se cambie de AM a PM según las doce.</p>
     <section id="reloj">
         <div class="contenedor-reloj">
                 <div id="fecha-actual"></div>
@@ -64,6 +65,7 @@
 
     </section>
     <h2 id="crono" class="title2">CRONÓMETRO</h2>
+    <p>Para poder realizar este cronómetro, utilizamos dos botones para empezar la cuenta y para ponerlo a 0, ambas funcionan bajo el evento "click" y se usaron dos funciones propias actualizar() que es un contador que va aumentando los milisegundos hasta aumentar a horas, la función iniciarContador() que hace que la cuenta se active y la función resetear() que envía a 0 la cuenta y se muestra en pantalla 0:0:0. </p>
     <section id="cronómetro">
         <div class="contenedor-cronometro">
         <div class="cronos">
@@ -82,6 +84,7 @@
     </section>
 
     <h2 id="juego" class="title2">VIDEOJUEGO</h2>
+    <p>Se crea un juego de memoria que nos muestra cartas las cuales debemos adivinar el par, tiene un contador de intentos y un contador de tiempo que cuando llegue a 0 pierdes o cuando los intentos sean 0, el codigo de este juego es un poco complicado, se genera una matriz con 6 cartas conteniendo imagenes, se aleatorian estas imagenes cada que recargue la página y empieza el juego. </p>
 
     <section id="game">
         <div class="contenedor-juego">
@@ -95,6 +98,7 @@
 
 
     <h2 id="roll" class="title2">ROLLOVER</h2>
+    <p>Se utilizó jquery para utilizar hover que cuando se pase el raton en la imagen se cambia de imagen y se muestra un mensaje mostrando el nombre de la carta y cuando no se vuelve a la imagen original que en este caso es la carta boca abajo. </p>
 
     <section id="rollover">
         
